<?xml version="1.0"?>
<package format="2">
  <name>fa_harris</name>
  <version>1.0.0</version>
  <description>The FA-Harris Detector ROS package</description>

  <maintainer email="ruoxianglee@163.com">Ruoxiang Li</maintainer>
  <author>Ruoxiang Li</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>dvs_msgs</depend>

  <export>

  </export>


</package>
